<?xml version="1.0"?>
<package format="2">
  <name>d-bot-m2m-movement</name>
  <version>0.0.0</version>
  <description>The d-bot-m2m-movement package</description>
  <maintainer email="niko.lappi@aalto.fi">root</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
